<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">4Chat</string>
    <string name="action_save">save</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_match_password">Passwords do not match</string>
    <string name="required_fields">All fields must be filled out</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="email_registration">Email Registration</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="profile_username">Name</string>
    <string name="profile_email">Email</string>
    <string name="nav_profile_string">Profil</string>
    <string name="nav_chatAndFriends">Chat och Vänner</string>
    <string name="nav_logout">Logga ut</string>
    <string name="nav_allUsers">Alla användare</string>
    <string name="search_users">Sök användare...</string>

    <string name="facebook_app_id">288776491772638</string>
    <string name="fb_login_protocol_scheme">fb288776491772638</string>
    <string name="nav_chatrooms">Chatrooms</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="private_messages">Private Messages</string>
    <string name="friends">Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="unfriend_this_person">Unfriend this person</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_chatroom_name">Enter Chatroom Name</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_photo_from_memory">Choose photo from memory</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="chooce_language">Choose language</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="decline_friend_request">Decline friend Request</string>

    <string name="admin">Admin</string>
    <string name="no_active_users">No Active Users</string>
    <string name="active_users">Active Users</string>
    <string name="active_user">Active User</string>
    <string name="no_messages">No Messages</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="choose">Choose</string>
    <string-array name="choose">
        <item>Send Message</item>
        <item>View Profile</item>
    </string-array>
    <string name="create_new_chatroom">Create new chatroom?</string>
</resources>
