<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile_string"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
    <item
        android:id="@+id/nav_chatrooms"
        android:title="@string/nav_chatrooms"
        android:icon="@drawable/ic_message"/>
    <item
        android:id="@+id/nav_chat_test"
        android:title="Chat BETA"
        android:icon="@drawable/ic_message"/>
    <item
        android:id="@+id/nav_all_users"
        android:title="@string/nav_allUsers"
        android:icon="@drawable/ic_person_add_black_add_24dp"/>

    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="Friends"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

</menu>